# opscore

./: .bumpversion.cfg  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.rst  README.md  setup.cfg  setup.py  tasks.py
etc/: opscore.module
examples/: __init__.py  basescriptrunner.py  logparse.py  migration.py  scriptrunner.py  secret.py
python/opscore/: __init__.py
python/opscore/RO/: AddCallback.py  CanvasUtil.py  CnvUtil.py  Constants.py  CoordSys.py  DS9.py  InputCont.py  KeyDispatcher.py  KeyVariable.py  MathUtil.py  PVT.py  PhysConst.py  SQLUtil.py  ScriptRunner.py  SeqUtil.py  StringUtil.py  SysConst.py  TkUtil.py  __init__.py  procFiles.py
python/opscore/RO/Alg/: IDGen.py  MultiDict.py  __init__.py
python/opscore/RO/Comm/: BaseSocket.py  Generic.py  HTTPGet.py  HubConnection.py  TCPConnection.py  TkSerial.py  TkSocket.py  TwistedSocket.py  VMSTelnet.py
python/opscore/actor/: __init__.py  actordispatcher.py  basescriptrunner.py  cmdkeydispatcher.py  keydispatcher.py  keyvar.py  model.py  scriptrunner.py
python/opscore/ply/: cpp.py  lex.py  yacc.py  ygen.py
python/opscore/protocols/: keys.py  keysformat.py  messages.py  parser.py  pvt.py  types.py  validation.py
python/opscore/utility/: YPF.py  assembleImage.py  astrotime.py  config.py  html.py  qstr.py  sdss3logging.py  tback.py  timer.py
tests/: actordispatcher.py  astrotime.py  cmdkeyvardispatcher.py  config-test.ini  config.py  html.py  keys.py  keysformat.py  keyvardispatcher.py  messages.py  model.py  parser.py  runTests.py  types.py  validation.py
ups/: opscore.table
(+101 files in other folders)
