[metadata]
name = sdss-opscore
version = 3.0.0-alpha.0
author = David Kirkby
author_email = dkirkby@uci.edu
maintainer = José Sánchez-Gallego
maintainer_email = gallegoj@uw.edu
description = SDSS core actor and parsing classes
url = https://github.com/sdss/opscore
project_urls =
	Repository = https://github.com/sdss/opscore
long_description = file: README.md
long_description_content_type = text/markdown
keywords = astronomy, software
license = BSD 3-Clause License
license_file = LICENSE.md
classifiers =
	Intended Audience :: Science/Research
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
package_dir =
	= python
dependency_links =
     actorkeys @ https://github.com/sdss/actorkeys/tarball/sdss5

[options.packages.find]
where =
	python

[options.package_data]
opscore =

[isort]
line_length = 79
sections =
	FUTURE
	STDLIB
	THIRDPARTY
	FIRSTPARTY
	LOCALFOLDER
default_section = THIRDPARTY
known_first_party = opscore
# multi_line_output = false
balanced_wrapping = true
include_trailing_comma = false
length_sort_stdlib = false
lines_after_imports = 2
use_parentheses = true
